--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,9 @@
     padding:0px;
     margin:0px;
 }
+#home{
+    margin-left: 150px;
+}
 
 #top_right{
     position:absolute;
@@ -38,7 +41,7 @@ nav{
     border-radius: 10px;
 }
 h1{
-    font-size: 50px;
+    font-size: 70px;
     margin-left: 100px;
     margin-top: 20px;
     color: #333;
@@ -99,7 +102,9 @@ h1{
     left: 1000px;
 
 }
-
+#about{
+    margin-top: 100px;
+}
 #mission_text{
     color: #000;
 font-family: Inter;
@@ -129,4 +134,66 @@ width:550px;
 }
 #vision{
     margin-top: 100px;
+}
+
+#our_team{
+    margin-top: 400px;
+    background-color: #F2F0F4;
+}
+#T-bg{
+    z-index: -1;
+    position: absolute;
+    top:1700px;
+    height: 700px;
+    left: 300px;
+}
+#members{
+    display: flex;
+    gap: 150px;
+    margin-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#our_team_title{
+    font-size: 35px;
+    color: #333;
+    margin-left: 100px;
+    padding-top: 50px;
+}
+#members{
+   
+    margin-left: 350px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#team_member{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+h4{
+    font-size: 25px;
+    color: #333;
+    margin-top: 10px;
+text-align: center;}
+#T-icons{
+   
+    gap: 20px;
+    margin-top: 10px;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+
+}
+#individuals p{
+    text-align: center;
+    margin-left: 10px;
+}
+.socials{
+    display: flex;
+    gap:30px;
+    justify-content: center;
 }
