--- a/css/index.css
+++ b/css/index.css
@@ -4,23 +4,23 @@
 }
 
 #home{
-    margin-left: 150px;
+    margin-left: 50px;
 }
 
 #top_right{
     position:absolute;
     right:0px;
     top:0px;
-    width:1150px;
-    height:1400px;
+    width:800px;
+    height:1050px;
     z-index:-1;
 }
 
 ul{
     list-style: none;
     display: flex;
-    gap: 30px;
-    font-size: 20px;
+    gap: 20px;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -31,7 +31,7 @@ a{
 
 nav{
     
-    margin-left: 1300px;
+    margin-left: 600px;
     margin-top: 30px;
 }
 
@@ -39,28 +39,28 @@ nav{
 
 
 #logo{
-    width: 200px;
-    height: 200px;
-    margin-left: 100px;
+    width: 150px;
+    height: 150px;
+    margin-left: 50px;
     margin-top: 40px;
     border-radius: 10px;
 }
 h1{
-    font-size: 70px;
-    margin-left: 100px;
+    font-size: 42px;
+    margin-left: 50px;
     margin-top: 20px;
     color: #333;
 }
 #intro_text{
-    font-size: 20px;
-    margin-left: 100px;
+    font-size: 16px;
+    margin-left: 50px;
     margin-top: 20px;
     color: #555;
-    width: 600px;
+    width: 500px;
     line-height: 1.5;
 }
 .buttons{
-    margin-left: 100px;
+    margin-left: 50px;
     margin-top: 30px;
     display: flex;
     gap: 20px;
@@ -92,57 +92,60 @@ h1{
     line-height: 1.6;
 }
 #about_text{
-     font-size: 20px;
+     font-size: 16px;
     margin-left: 100px;
-    margin-top: 20px;
-    color: #555;
-    width: 800px;
+    margin-top: 2px;
+    color: #000000;
+    width: 450px;
     line-height: 1.5;
 }
 #rocket{
     z-index: -1;
     position: absolute;
-    width: 700px;
-    height: 770px;
-    left: 1000px;
+    width: 420px;
+    height: 470px;
+    left: 600px;
+    top:650px
 
 }
 #about{
     margin-top: 100px;
+    margin-left: 50px;
 }
 #mission_text{
     color: #000;
 font-family: Inter;
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px;
-width:550px; /* 130% */
+width:450px; /* 130% */
 }
 h3{
-    font-size: 40px;
+    font-size: 24px;
     color: #333;
     margin-bottom: 10px;
 }
 #vision_text{
     color: #000;
 font-family: Inter;
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 26px;
-width:550px;
+width:450px;
 }
 .mission_vision{
     margin-left: 100px;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 #vision{
-    margin-top: 100px;
+    margin-top: 30px;
+
 }
 
 #our_team{
-    margin-top: 400px;
+    margin-top: 200px;
     background-color: #F2F0F4;
 }
 #T-bg{
@@ -154,43 +157,38 @@ width:550px;
 }
 #members{
     display: flex;
-    gap: 150px;
-    margin-left: 100px;
+    gap: 100px;
+    margin-left: 150px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 #our_team_title{
-    font-size: 35px;
+    font-size: 24px;
     color: #333;
     margin-left: 100px;
     padding-top: 50px;
 }
-#members{
-   
-    margin-left: 350px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
+
 #team_member{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-h4{
-    font-size: 25px;
+#t-name{
     color: #333;
     margin-top: 10px;
-text-align: center;}
+    text-align: center;
+}
+
 #T-icons{
    
-    gap: 20px;
+    gap: 10px;
     margin-top: 10px;
     justify-content: center;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
 
 }
 #individuals p{
@@ -199,53 +197,72 @@ text-align: center;}
 }
 .socials{
     display: flex;
-    gap:30px;
+    gap:20px;
     justify-content: center;
 }
 
 #bg_courses{
     z-index: -1;
     position: absolute;
-    width: 2500px;
-    top: 2600px;
+    width: 1500px;
+    top: 1800px;
     left: -100px;
 }
 #course_title{
-    font-size: 35px;
+    font-size: 24px;
     color: #333;
     margin-left: 100px;
-    padding-top: 30px;}
+    margin-top:100px;
+    width: 200px;
+    height: 50px;
+    padding: 0px;
+}    
 #course_img{
-    width: 430px;
-    height: 259px;
+    width: 270px;
+    height: 180px;
     border-radius: 10px;
 }
 #course_card{
-    width: 430px;
-height: 410px;
+    width: 270px;
+    height: 310px;
 border-radius: 10px;
 background: #F0F0F0;
 box-shadow: 0 4px 11.1px 4px rgba(0, 0, 0, 0.56);
+transition-duration: 0.3s;
+
+}
+
+#course_card:hover{
+    box-shadow: 0 8px 11.1px 8px rgba(0, 0, 0, 0.56);
+    background: #e2e1e1;
+    transition-duration: 0.5s;
+    position: relative;
+    top:-10px;
+
+
 }
 
 #course_card p{
-    color: #000;
+color: #000;
 font-family: Inter;
-font-size: 16px;
+font-size: 12px;
 font-style: normal;
 font-weight: 400;
-line-height: 30px; 
-width: 425px;
-padding: 10px;
+width: 200px;
+padding: 20px;
 }
 
 #courses{
     display: flex;
     gap: 50px;
-    margin-left: 100px;
-    padding-top: 50px;
-    padding-bottom: 100px;
-    margin-top: 200px;
+    margin-left: 250px;
+    margin-top: 30px;
+}
+#course_card h4{
+    font-size:15px;
+    margin-left: 20px;
+
+
 }
 #row1{
     display: flex;
@@ -261,6 +278,6 @@ padding: 10px;
 
 #course_card a{
     color:#040163;
-    font-size: 15px;
-    margin-left: 300px;
+    font-size: 12px;
+    margin-left: 150px;
 }
