--- a/css/index.css
+++ b/css/index.css
@@ -3,19 +3,10 @@
     margin:0px;
 }
 
-#home{
-    margin-left: 50px;
-}
 
-#top_right{
-    position:absolute;
-    right:0px;
-    top:0px;
-    width:800px;
-    height:1050px;
-    z-index:-1;
+header{
+    height:100px;
 }
-
 ul{
     list-style: none;
     display: flex;
@@ -34,7 +25,14 @@ nav{
     margin-left: 600px;
     margin-top: 30px;
 }
+#nav_item:hover{
+    background-color: #4945cacf;
+    border-radius: 5px;
+    padding: 5px;
+    transition-duration: 0.3s;
 
+
+}
 
 
 
@@ -44,7 +42,40 @@ nav{
     margin-left: 50px;
     margin-top: 40px;
     border-radius: 10px;
+    animation:logo infinite 4s;
+    animation-delay: 0s;
 }
+
+@keyframes logo {
+    0%{box-shadow: 0 4px 11.1px 4px rgba(109, 86, 241, 0.56);}
+    25%{box-shadow: 0 4px 11.1px 4px rgba(26, 16, 83, 0.56);}
+    50%{box-shadow: 0 4px 11.1px 4px rgba(109, 86, 241, 0.56);}
+    75%{box-shadow: 0 4px 11.1px 4px rgba(109, 86, 241, 0.56);}
+    100%{box-shadow: 0 4px 11.1px 4px rgba(109, 86, 241, 0.56);}
+    
+}
+
+#home{
+    margin-left: 50px;
+}
+
+#top_right{
+    position:absolute;
+    right:0px;
+    top:0px;
+    width:800px;
+    height:1050px;
+    z-index:-1;
+    animation: top_right infinite 4s;
+}
+
+@keyframes top_right {
+    0%{top:-10px}
+    50%{top:0px}
+    100%{top:-10px}
+    
+}
+
 h1{
     font-size: 42px;
     margin-left: 50px;
@@ -69,10 +100,18 @@ h1{
     padding: 10px 20px;
     background-color: #040163;
     color: white;
-    border: none;
+    border: 2px solid #040163;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+}
+#join_us:hover{
+    transition-duration: 0.1s;
+    background-color: #fff;
+    color: #040163;
+    border: 2px solid #040163;
+
+
 }
 #explore_our_courses{
     padding: 10px 20px;
@@ -82,6 +121,13 @@ h1{
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+}
+#explore_our_courses:hover{
+    transition-duration: 0.1s;
+    background-color: #040163;
+    color: white;
+    border: none;
+
 }
 #about_title{
     margin-left: 100px;
@@ -105,7 +151,7 @@ h1{
     width: 420px;
     height: 470px;
     left: 600px;
-    top:650px
+    top:750px
 
 }
 #about{
@@ -212,7 +258,7 @@ width:450px;
     font-size: 24px;
     color: #333;
     margin-left: 100px;
-    margin-top:100px;
+    margin-top:50px;
     width: 200px;
     height: 50px;
     padding: 0px;
